--- a/modules/busybox-lite/Makefile
+++ b/modules/busybox-lite/Makefile
@@ -1,21 +1,31 @@
-CROSS_COMPILE=arm-linux-gnueabi-
-CC=$(CROSS_COMPILE)gcc
-AR=$(CROSS_COMPILE)ar 
-LD=$(CROSS_COMPILE)ld
-export CROSS_COMPILE CC AR LD
-
-CFLAGS += -I$(PWD)/include/ -I$(PWD)/ -Wall  -O2
-LDFLAGS += -static
-SHARELIB = 
-export CFLAGS LDFLAGS
+DIR_INC = ./inc
+DIR_SRC = ./src
+DIR_OBJ = ./obj
 
 
-TARGET =libbusybox.a
-SRCS = $(wildcard *.c)
-OBJS = $(SRCS:.c=.o)
+SRC = $(wildcard ${DIR_SRC}/*.c)  
+OBJ = $(patsubst %.c,${DIR_OBJ}/%.o,$(notdir ${SRC})) 
 
-all: $(OBJS)
-	@ $(AR) -rc $(TARGET) $(OBJS)
-	cp $(TARGET) ../../modules
+TARGET = libbusybox.a
+ 
+
+#CROSS_COMPILE=arm-linux-gnueabi-
+#CC=$(CROSS_COMPILE)gcc
+#AR=$(CROSS_COMPILE)ar 
+#LD=$(CROSS_COMPILE)ld
+
+
+CFLAGS = -I$(DIR_INC) -Wall -static
+
+
+ 
+${TARGET}:${OBJ}
+	$(AR) rc $@ $^ 
+	@mv $(TARGET) ../../libs
+${DIR_OBJ}/%.o:${DIR_SRC}/%.c
+	@mkdir -p $(DIR_OBJ)
+	$(CC) $(CFLAGS) -c  $< -o $@
+
+.PHONY:clean
 clean:
-	@ rm -f *.o *.a
+	@rm -rf $(DIR_OBJ)
