fixed some stability issues, add fault-tolerance for pipe fd, add -g in CFLAG

--- a/src/modules/busybox-lite/Makefile
+++ b/src/modules/busybox-lite/Makefile
@@ -15,7 +15,7 @@ TARGET = libbusybox.a
 #LD=$(CROSS_COMPILE)ld
 
 
-CFLAGS = -I$(DIR_INC) -Wall -static
+CFLAGS = -I$(DIR_INC) -Wall -static -g
 
 
  
