--- a/src/modules/sysstat-lite/Makefile
+++ b/src/modules/sysstat-lite/Makefile
@@ -15,7 +15,7 @@ TARGET = libsysstat.a
 #LD=$(CROSS_COMPILE)ld
 
 
-CFLAGS = -g -I$(DIR_INC) -Wall -static
+CFLAGS = -g -I$(DIR_INC) -Wall -static -g
 
 
  
